# figurya

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  render.yaml  requirements.txt
cf-worker/: README.md  worker.js  wrangler.toml
oracle-proxy/: proxy.py  setup.sh
weebshelf/: app.py  cache.py  config.py  crawler.py  database.py  models.py  query.py  ranker.py  reviews.py
weebshelf/fetchers/: amazon.py  amiami.py  animate.py  base.py  cdjapan.py  goodsmile.py  hlj.py  hobbygenki.py  hobbysearch.py  kotobukiya.py  mfc.py  navito.py  ninnin.py  otakurepublic.py  plaza.py  solaris.py  surugaya.py  tom.py
weebshelf/static/: style.css
weebshelf/templates/: 404.html  429.html  500.html  _footer.html  _footer_minimal.html  _head.html  _navbar.html  _scripts.html  admin.html  admin_login.html  donate.html  index.html
