[project]
name = "figurya"
version = "0.1.0"
description = "Figurya — find the perfect figurine. Search by character, style, or vibe."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "jinja2>=3.1",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "pydantic>=2.5",
]

[project.scripts]
figurya = "weebshelf.app:main"
